@@ -24,7 +24,7 @@
 //define('ZBX_DENY_GUI_ACCESS',1); 
 
 // IP range, who allowed to connect to FrontEnd
-//$ZBX_GUI_ACCESS_IP_RANGE = array('');
+//$ZBX_GUI_ACCESS_IP_RANGE = array('127.0.0.1');
 
 // MSG showed on Warning screen!
 //$_REQUEST['warning_msg'] = 'ZABBIX is under maintenance.';
