@@ -399,8 +399,10 @@ COpt::counter_up('perm');
 
 					$do_break = true;
 
-					if(is_array($nodeid) && !uint_in_array($node_data['nodeid'],$nodeid))	continue;
-					else if(!is_array($nodeid) && (bccomp($node_data['nodeid'] ,$nodeid) != 0))		continue;
+					if(isset($nodeid) && is_array($nodeid)){
+						if(!uint_in_array($node_data['nodeid'],$nodeid))	continue;
+					}
+					else if(isset($nodeid) && (bccomp($node_data['nodeid'] ,$nodeid) != 0))	continue;
 				}
 				else
 				{
